--- a/index.html
+++ b/index.html
@@ -5,7 +5,101 @@
     <title>BTest 1</title>
 </head>
 <body>
-    <h1>Test 2</h1>
-    <p>Test2</p>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Example Page</title>
+	<style>
+		body {
+			background-color: #f0f0f0;
+			font-family: Arial, sans-serif;
+			font-size: 14px;
+			color: #333;
+		}
+
+		h1 {
+			color: #0099cc;
+			font-size: 28px;
+			text-align: center;
+		}
+
+		table {
+			background-color: #fff;
+			border-collapse: collapse;
+			margin: 0 auto;
+		}
+
+		th, td {
+			padding: 10px;
+			text-align: center;
+			border: 1px solid #ccc;
+		}
+
+		th {
+			background-color: #0099cc;
+			color: #fff;
+			font-size: 18px;
+		}
+
+		ul {
+			list-style-type: disc;
+			margin-left: 20px;
+		}
+
+		ol {
+			list-style-type: decimal;
+			margin-left: 20px;
+		}
+
+		li {
+			margin-bottom: 5px;
+		}
+	</style>
+</head>
+<body>
+	<h1>Welcome to Example Page</h1>
+
+	<p>Here's an example of an unordered list:</p>
+	<ul>
+		<li>Item 1</li>
+		<li>Item 2</li>
+		<li>Item 3</li>
+	</ul>
+
+	<p>Here's an example of an ordered list:</p>
+	<ol>
+		<li>First item</li>
+		<li>Second item</li>
+		<li>Third item</li>
+	</ol>
+
+	<p>Here's an example of a table:</p>
+	<table>
+		<thead>
+			<tr>
+				<th>Column 1</th>
+				<th>Column 2</th>
+				<th>Column 3</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>Row 1, Column 1</td>
+				<td>Row 1, Column 2</td>
+				<td>Row 1, Column 3</td>
+			</tr>
+			<tr>
+				<td>Row
+
+<h1>This is a heading</h1>
+<h2>This is a subheading</h2>
+<p>This is a paragraph.</p>
+<br>This is a line break.
+<hr>This is a horizontal rule.
+<b>This is bold text.</b>
+<i>This is italic text.</i>
+<a href="https://www.google.com">This is a link.</a>
+<img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" alt="Google logo">
+"""
 </body>
 </html>
