--- a/index.html
+++ b/index.html
@@ -73,31 +73,31 @@
 		<li>Third item</li>
 	</ol>
 
-	<p>Here's an example of a table:</p>
+	<p>table:</p>
 	<table>
 		<thead>
 			<tr>
-				<th>Column 1</th>
-				<th>Column 2</th>
-				<th>Column 3</th>
+				<th>C 1</th>
+				<th>C 2</th>
+				<th>C 3</th>
 			</tr>
 		</thead>
 		<tbody>
 			<tr>
-				<td>Row 1, Column 1</td>
-				<td>Row 1, Column 2</td>
-				<td>Row 1, Column 3</td>
+				<td>R 1, C 1</td>
+				<td>R 1, C 2</td>
+				<td>R 1, C 3</td>
 			</tr>
 			<tr>
 				<td>Row
 
-<h1>This is a heading</h1>
-<h2>This is a subheading</h2>
-<p>This is a paragraph.</p>
-<br>This is a line break.
-<hr>This is a horizontal rule.
-<b>This is bold text.</b>
-<i>This is italic text.</i>
+<h1>heading</h1>
+<h2>subheading</h2>
+<p>paragraph.</p>
+<br>line break.
+<hr> horizontal rule.
+<b> bold text.</b>
+<i>italic text.</i>
 <a href="https://www.google.com">This is a link.</a>
 <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" alt="Google logo">
 """
