--- a/index.html
+++ b/index.html
@@ -1,105 +1,74 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BTest 1</title>
-</head>
-<body>
-<!DOCTYPE html>
+!DOCTYPE html>
 <html>
 <head>
-	<title>Example Page</title>
-	<style>
-		body {
-			background-color: #f0f0f0;
-			font-family: Arial, sans-serif;
-			font-size: 14px;
-			color: #333;
-		}
-
-		h1 {
-			color: #0099cc;
-			font-size: 28px;
-			text-align: center;
-		}
-
-		table {
-			background-color: #fff;
-			border-collapse: collapse;
-			margin: 0 auto;
-		}
-
-		th, td {
-			padding: 10px;
-			text-align: center;
-			border: 1px solid #ccc;
-		}
-
-		th {
-			background-color: #0099cc;
-			color: #fff;
-			font-size: 18px;
-		}
-
-		ul {
-			list-style-type: disc;
-			margin-left: 20px;
-		}
-
-		ol {
-			list-style-type: decimal;
-			margin-left: 20px;
-		}
-
-		li {
-			margin-bottom: 5px;
-		}
-	</style>
+    <title>My Website</title>
+    <style>
+        /* applying styles to elements */
+        ul {
+            color: rgb(255, 0, 0);
+            font-size: 20px;
+            background-color: #eee;
+            text-align: center;
+        }
+        th {
+            color: #00bfff;
+        }
+        td {
+            color: rgb(128, 0, 128);
+        }
+        h1 {
+            text-align: center;
+            color: #00bfff;
+        }
+        hr {
+            border: 2px solid #eee;
+        }
+        .contact-link {
+            color: green;
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
-	<h1>Welcome to Example Page</h1>
-
-	<p>Here's an example of an unordered list:</p>
-	<ul>
-		<li>Item 1</li>
-		<li>Item 2</li>
-		<li>Item 3</li>
-	</ul>
-
-	<p>Here's an example of an ordered list:</p>
-	<ol>
-		<li>First item</li>
-		<li>Second item</li>
-		<li>Third item</li>
-	</ol>
-
-	<p>table:</p>
-	<table>
-		<thead>
-			<tr>
-				<th>C 1</th>
-				<th>C 2</th>
-				<th>C 3</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<td>R 1, C 1</td>
-				<td>R 1, C 2</td>
-				<td>R 1, C 3</td>
-			</tr>
-			<tr>
-				<td>Row
-
-<h1>heading</h1>
-<h2>subheading</h2>
-<p>paragraph.</p>
-<br>line break.
-<hr> horizontal rule.
-<b> bold text.</b>
-<i>italic text.</i>
-<a href="https://www.google.com">This is a link.</a>
-<img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" alt="Google logo">
-"""
+    <h1>Welcome to My Website</h1>
+    <h2>About Me</h2>
+    <p>
+        Hello, my name is Platonov Vlad. I am a web developer with a passion for coding.
+        <br>
+        I have experience in HTML, CSS, and JavaScript.
+    </p>
+    <hr>
+    <h2>Skills</h2>
+    <!-- using ul, ol, and li tags -->
+    <ul>
+        <li><b>HTML</b></li>
+        <li><b>CSS</b></li>
+        <li><b>JavaScript</b></li>
+    </ul>
+    <!-- using table, tr, th, and td tags -->
+    <h2>Experience</h2>
+    <table>
+        <tr>
+            <th>Date</th>
+            <th>Position</th>
+            <th>Company</th>
+        </tr>
+        <tr>
+            <td>2018-2020</td>
+            <td>Web Developer</td>
+            <td>ABC Company</td>
+        </tr>
+        <tr>
+            <td>2020-Present</td>
+            <td>Senior Developer</td>
+            <td>XYZ Inc.</td>
+        </tr>
+    </table>
+    <h2>Contact Me</h2>
+    <p>
+        You can reach me via email at <a href="mailto:vlad@example.com" class="contact-link">vlad@example.com</a>.
+    </p>
+    <h2>My Picture</h2>
+    <img src="profile.jpg" alt="My Profile Picture">
 </body>
 </html>
