--- a/index.html
+++ b/index.html
@@ -6,26 +6,26 @@
         /* applying styles to elements */
         ul {
             color: rgb(255, 0, 0);
-            font-size: 20px;
+            font-size: 70px;
             background-color: #eee;
             text-align: center;
         }
         th {
-            color: #00bfff;
+            color: #244fff;
         }
         td {
-            color: rgb(128, 0, 128);
+            color: rgb(178, 0, 428);
         }
         h1 {
-            text-align: center;
+            text-align: left;
             color: #00bfff;
         }
         hr {
-            border: 2px solid #eee;
+            border: 8px solid #eee;
         }
         .contact-link {
-            color: green;
-            font-weight: bold;
+            color: yellow;
+            font-weight: italic;
         }
     </style>
 </head>
