--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-    <title>My Website</title>
+      <title>My Website</title>
     <style>
         /* applying styles to elements */
         ul {
-            color: rgb(255, 0, 0);
-            font-size: 70px;
+            color: red;
+            font-size: 20px;
             background-color: #eee;
             text-align: center;
         }
         th {
-            color: #244fff;
+            color: #00bfff;
         }
         td {
-            color: rgb(178, 0, 428);
+            color: rgb(128, 0, 128);
         }
         h1 {
-            text-align: left;
+            text-align: center;
             color: #00bfff;
         }
         hr {
-            border: 8px solid #eee;
+            border: 2px solid #eee;
         }
         .contact-link {
-            color: yellow;
-            font-weight: italic;
+            color: green;
+            font-weight: bold;
         }
     </style>
 </head>
@@ -33,7 +33,7 @@
     <h1>Welcome to My Website</h1>
     <h2>About Me</h2>
     <p>
-        Hello, my name is Platonov Vlad. I am a web developer with a passion for coding.
+        Hello, my name is John Doe. I am a web developer with a passion for coding.
         <br>
         I have experience in HTML, CSS, and JavaScript.
     </p>
@@ -66,7 +66,7 @@
     </table>
     <h2>Contact Me</h2>
     <p>
-        You can reach me via email at <a href="mailto:vlad@example.com" class="contact-link">vlad@example.com</a>.
+        You can reach me via email at <a href="mailto:john@example.com" class="contact-link">john@example.com</a>.
     </p>
     <h2>My Picture</h2>
     <img src="profile.jpg" alt="My Profile Picture">
