--- a/index.html
+++ b/index.html
@@ -3,29 +3,29 @@
 <head>
       <title>My Website</title>
     <style>
-        /* applying styles to elements */
+        /* applying different styles to elements */
         ul {
-            color: red;
-            font-size: 20px;
-            background-color: #eee;
+            color: blue;
+            font-size: 18px;
+            background-color: #f0f0f0;
             text-align: center;
         }
         th {
-            color: #00bfff;
+            color: #008000;
         }
         td {
-            color: rgb(128, 0, 128);
+            color: rgb(0, 128, 0);
         }
         h1 {
             text-align: center;
-            color: #00bfff;
+            color: #008000;
         }
         hr {
-            border: 2px solid #eee;
+            border: 1px solid #f0f0f0;
         }
         .contact-link {
-            color: green;
-            font-weight: bold;
+            color: #0000FF;
+            font-weight: normal;
         }
     </style>
 </head>
