--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-      <title>My Website</title>
+    <title>My Website</title>
     <style>
-        /* applying different styles to elements */
+        /* Applying different styles to elements */
         ul {
             color: blue;
             font-size: 18px;
@@ -39,13 +39,13 @@
     </p>
     <hr>
     <h2>Skills</h2>
-    <!-- using ul, ol, and li tags -->
+    <!-- Using ul, ol, and li tags -->
     <ul>
         <li><b>HTML</b></li>
         <li><b>CSS</b></li>
         <li><b>JavaScript</b></li>
     </ul>
-    <!-- using table, tr, th, and td tags -->
+    <!-- Using table, tr, th, and td tags -->
     <h2>Experience</h2>
     <table>
         <tr>
