--- a/index.html
+++ b/index.html
@@ -1,74 +1,81 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Website</title>
+    <title>My Unique Page</title>
     <style>
-        /* Applying different styles to elements */
-        ul {
-            color: blue;
-            font-size: 18px;
-            background-color: #f0f0f0;
+        /* Applying unique styles to elements */
+        body {
+            background-color: #f1f1f1;
             text-align: center;
-        }
-        th {
-            color: #008000;
-        }
-        td {
-            color: rgb(0, 128, 0);
         }
         h1 {
-            text-align: center;
-            color: #008000;
+            color: #ff6600;
+            font-size: 36px;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+        ul li {
+            font-weight: bold;
+            font-size: 20px;
+            margin: 10px 0;
+        }
+        th {
+            color: #9900cc;
+        }
+        td {
+            color: #ff33cc;
         }
         hr {
-            border: 1px solid #f0f0f0;
+            border: 2px dotted #ff6600;
         }
         .contact-link {
-            color: #0000FF;
+            color: #33cc33;
             font-weight: normal;
         }
     </style>
 </head>
 <body>
-    <h1>Welcome to My Website</h1>
+    <h1>Welcome to My Unique Page</h1>
     <h2>About Me</h2>
     <p>
-        Hello, my name is John Doe. I am a web developer with a passion for coding.
+        Greetings! I'm Jane Smith, a creative coder exploring the digital realm.
         <br>
-        I have experience in HTML, CSS, and JavaScript.
+        My journey includes HTML, CSS, and the magic of JavaScript.
     </p>
     <hr>
-    <h2>Skills</h2>
+    <h2>Extraordinary Talents</h2>
     <!-- Using ul, ol, and li tags -->
     <ul>
-        <li><b>HTML</b></li>
-        <li><b>CSS</b></li>
-        <li><b>JavaScript</b></li>
+        <li><b>Hyper Text Markup Language</b></li>
+        <li><b>Cascading Style Sheets</b></li>
+        <li><b>The Enigmatic JavaScript</b></li>
     </ul>
     <!-- Using table, tr, th, and td tags -->
-    <h2>Experience</h2>
+    <h2>Unconventional Experience</h2>
     <table>
         <tr>
-            <th>Date</th>
-            <th>Position</th>
-            <th>Company</th>
+            <th>Epoch</th>
+            <th>Role</th>
+            <th>Enchanted Company</th>
         </tr>
         <tr>
-            <td>2018-2020</td>
-            <td>Web Developer</td>
-            <td>ABC Company</td>
+            <td>The Dawn of Time</td>
+            <td>Mystical Developer</td>
+            <td>Secret Society of Coders</td>
         </tr>
         <tr>
-            <td>2020-Present</td>
-            <td>Senior Developer</td>
-            <td>XYZ Inc.</td>
+            <td>Now and Forever</td>
+            <td>Wizard of Code</td>
+            <td>Magic Web Creations, Inc.</td>
         </tr>
     </table>
-    <h2>Contact Me</h2>
+    <h2>Contact the Sorceress</h2>
     <p>
-        You can reach me via email at <a href="mailto:john@example.com" class="contact-link">john@example.com</a>.
+        You can communicate with me through the carrier owl at <a href="mailto:jane@example.com" class="contact-link">jane@example.com</a>.
     </p>
-    <h2>My Picture</h2>
-    <img src="profile.jpg" alt="My Profile Picture">
+    <h2>The Portal to Another Realm</h2>
+    <img src="mysterious.jpg" alt="The Mystic Portal">
 </body>
 </html>
