--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Unique Page</title>
+    <title>My Website</title>
     <style>
         /* Applying unique styles to elements */
         body {
